modified html and css

--- a/preview-card.html
+++ b/preview-card.html
@@ -12,11 +12,9 @@
 </head>
 <body>
     <section>
-    <div class="header">
         <div class="image">
             <img src="images/image-equilibrium.jpg" alt="Ethereum">
         </div>
-    </div>
     <div>
         <div class="text">
             <h1>Equilibrium #3429</h1>
@@ -39,7 +37,7 @@
             </div>
             <p>Creation of <span class="name">Jules Wyvern</span></p>
         </div>
-    </div>
     </section>
+</main>
 </body>
 </html>
